--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body{
 	min-height:100vh;
 	transition: 0.5s;
 	transition-timing-function: ease-in;
-	background-image: linear-gradient(to right bottom, #2c59e1fc, #92a9d2a8);
+	background-image: linear-gradient(to right bottom, #2c59e1fc, #92aad2);
 }
 #logo {
 	margin:auto; /* Required */
 	position:absolute; /* Required */
-	bottom:5%;
+	bottom:2%;
 	left:0;right:0; 
 	max-height:100%; 
 	max-width:100%;
@@ -32,9 +32,10 @@ body{
 	transition: 0.5s;
 	transition-timing-function: ease-in;
 	/* font-family: 'Roboto', sans-serif; */
-	background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8);
+	/* background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8); */
 	color: black;
-	-webkit-background-clip: text;
+	background-clip: text;
+	/* -webkit-background-clip: text; */
 }
 
 .question{
@@ -49,7 +50,7 @@ body{
 	padding-bottom: 8px;
 	padding-top: 9px;
 	margin-top: 5px;
-	background-image: linear-gradient(to right bottom, #fff700e2, #ffa73cc2);
+	background-image: linear-gradient(to right bottom, #fff700, #ffa73c);
 }
 
 .text-center{
@@ -94,7 +95,7 @@ p{
 	backface-visibility: hidden;
 	box-shadow: 0rem 1.5rem 4rem rgba(0, 0, 0, 0.15);
 	border-radius: .5rem;
-	background-image: linear-gradient(to right bottom, hsl(30, 40%, 94%),#F1DFD1);
+	background-image: linear-gradient(to right bottom, hsl(0, 0%, 100%),#e3cfc1);
 }
 
 .block_back {
