--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 	transition: 0.5s;
 	transition-timing-function: ease-in;
 	/* font-family: 'Roboto', sans-serif; */
-	background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8);
+	/* background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8); */
 	color: black;
 	-webkit-background-clip: text;
 }
