--- a/style.css
+++ b/style.css
@@ -13,11 +13,10 @@ body{
 #logo {
 	margin:auto; /* Required */
 	position:absolute; /* Required */
-	top:2%;
-	left:0;
-	right:0;
-	max-height:22%;
-	max-width:22%;
+	bottom:2%;
+	left:0;right:0; 
+	max-height:100%; 
+	max-width:100%;
 	height:25%;
 
 }	
@@ -25,7 +24,6 @@ body{
 	padding:3rem;
 	transition: 0.5s;
 	transition-timing-function: ease-in;
-	position: absolute;
 }
 	
 .text{
